[tool.poetry]
name = "lightning_hydra_template"
version = "0.1.0"
description = ""
authors = ["Ivo-B <im.baltruschat@icloud.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.scripts]
train = "src.train:main"

[tool.poetry.dependencies]
python = "^3.9"
# --------- pytorch --------- #
torch = {version = "2.3.1+cu121", source="pytorch-cuda"}
torchvision = {version = "0.18.1+cu121", source="pytorch-cuda"}
torchmetrics = {version = ">=1.0.0", source="pytorch-cuda"}
lightning = ">=2.0.0"

# --------- hydra --------- #
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"

# --------- loggers --------- #
wandb = "^0.17.1"

# --------- others --------- #
rootutils = "^1.0.7"
pre-commit = "^3.7.1"
rich = "^13.7.1"
pytest = "^8.2.2"
sh = "^2.0.7"

[tool.poetry.group.dev.dependencies]
mpire = "^2.3.3"
icecream = "^2.1.1"
pre-commit-update = "^0.3.2"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
